students/EvkovichAndrey/task_02/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web31
  namespace: app31
  labels:
    app: web31
    org.bstu.course: "RSIOT"
    org.bstu.student.id: "220039"
    org.bstu.group: "AS-64"
    org.bstu.variant: "31"
    org.bstu.owner: "Andrei21005"
    org.bstu.student.slug: "AS63-220039-v31"
  annotations:
    org.bstu.group: "АС-64"
spec:
  type: ClusterIP
  selector:
    app: web31
  ports:
    - port: 8023
      targetPort: 8023
      protocol: TCP
